# x-bot

./: .gitignore  README.md  pyproject.toml  telegram-bot.service
.claude/commands/: dev-status.md
architecture/: mvp-system-architecture.md
src/: approval.py  config.py  main.py  openclaw_client.py  pipeline.py  telegram_approval.py  telegram_bot.py  x_client.py  x_oauth_setup.py
state/: CURRENT_STATUS_STAGE1_DESIGN.md  CURRENT_STATUS_STAGE2_DESIGN.md  CURRENT_STATUS_STAGE3_DESIGN.md
